--- a/src/components/common/map/KakaoMap.css
+++ b/src/components/common/map/KakaoMap.css
@@ -20,3 +20,29 @@ text-decoration-line: none;
 color:white;
 background: rgba(0, 0, 0, 1.0);
 }
+
+#locationSearchbox{
+    width: 15em;
+}
+
+#locationSearchdiv {
+    margin-top: 3em;
+    margin-left: 1.5em;
+    z-index: 1500;
+    position: absolute;
+    top:5em;
+}
+
+#map {
+    margin: 0.5em;
+    height: 30em;
+}
+
+#mapWrapper{
+    padding-top: 1em;
+    padding-bottom: 1em;
+    border-radius: 2em;
+    width: 100%;
+    background-color: rgb(248, 248, 248);
+    text-align: center;
+}
