--- a/src/components/menu/MenuListManage.css
+++ b/src/components/menu/MenuListManage.css
@@ -3,8 +3,6 @@
     color: rgb(0, 0, 0);
 }
 
-
-
 #tableHead{
     background-color: rgb(235, 235, 235);
 }
@@ -13,6 +11,19 @@
 }
 
 .menuImage{
-    width: 8em;
-    height: 5em;
+    width: 6em;
+    height: 4em;
 }
+
+#menuNameSpace {
+    width: 5em;
+
+}
+
+#menuInfoSpace {
+    width: 13em;
+
+}
+
+
+
