--- a/src/components/menu/MenuListQR.css
+++ b/src/components/menu/MenuListQR.css
@@ -2,12 +2,63 @@
 
 
 
+#menuDetailWrapper {
+    
+    max-height: 50vh;
+    overflow-y: scroll;
+}
+    #menuDetailWrapper::-webkit-scrollbar {
+    width: 10px;
+    }
+    #menuDetailWrapper::-webkit-scrollbar-thumb{
+    background: #bbbbbb;
+    border-radius: 10px;
+    }
+    #menuDetailWrapper::-webkit-scrollbar-track {
+    background: F3F3F3;
+    }
+
+
+
+#modalBottomWrapper {
+   
+   display: inline-block;
+   background-color: white;
+    width: 100%;
+    text-align: center;
+    bottom: 0.5em;
+}
+
+
+
+#menuSimpleInfoSpace {
+
+    padding-left: 0.2em;
+}
+
+
+#menuPriceGagyuk {
+    
+    display: inline-block;
+}
+#menuPriceSpace {
+    padding-top: 1em;
+    float: right;
+    display: inline-block;
+}
+
+
+
+
 .menuQRImage {
     width: 6em;
     height: 4em;
     
 }
 
+.subtitle2 {
+    padding-top: 1em;
 
+}
 
 
