매니저페이지 및 디자인

--- a/src/components/common/Zumuniyo.css
+++ b/src/components/common/Zumuniyo.css
@@ -26,3 +26,7 @@ body::-webkit-scrollbar-thumb{
 body::-webkit-scrollbar-track {
     background: rgb(223, 218, 215);
 }
+
+#headerWrapper{
+    z-index: 2000;
+}
