--- a/src/components/common/map/KakaoMap.css
+++ b/src/components/common/map/KakaoMap.css
@@ -48,6 +48,16 @@ background: rgba(0, 0, 0, 1.0);
     padding-bottom: 1em;
     border-radius: 2em;
     width: 100%;
-    background-color: rgb(248, 248, 248);
+    background-color: rgb(245, 241, 238);
     text-align: center;
 }
+
+#mapbutton{
+    color: rgb(71, 30, 30);
+    border-color:rgb(71, 30, 30,0.7);
+    font-size: 0.9em;
+    border-radius: 1em;
+}
+#mapbutton:hover{
+    background-color: rgb(71, 30, 30,0.1);
+}   
