--- a/src/components/member/Register.css
+++ b/src/components/member/Register.css
@@ -7,7 +7,7 @@
     border-radius: 2em;
     color: rgb(71, 30, 30);
     background-color: rgb(248, 248, 248);
-
+    display: inline-block;
 }
 
 #registertitle{
@@ -31,3 +31,11 @@
     color: rgb(255, 255, 255);
     background-color: rgb(71, 30, 30,0.7);
 }   
+
+#registerWrapper{
+
+    width: 100%;
+    text-align: center;
+    margin: 0 auto;
+
+}
