--- a/src/components/menu/MenuDetailModal.css
+++ b/src/components/menu/MenuDetailModal.css
@@ -17,12 +17,13 @@
     }
 
 #modalBottomWrapper {
-   position: absolute;
-   display: inline-block;
-   background-color: white;
-    width: 100%;
-    text-align: center;
-    bottom: 0.5em;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    background-color: white;
+    position: sticky;
+    bottom: 0;
+    vertical-align: bottom;
+    z-index: 999;
 }
 
 
